Notebook functionalities finished

--- a/mine_fragments_leave.ipynb
+++ b/mine_fragments_leave.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -301,30 +301,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "query = '[lemma=\"leave\"]'"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training lda model began\n",
-      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5Blemma%3D%22leave%22%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=20\n",
-      "training of gensim corpus began\n",
-      "gensim corpus done\n"
-     ]
-    }
-   ],
    "source": [
     "result = topic_concordancer.main(query,window=20,topicn=25)"
    ]
@@ -337,117 +322,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0.399*\"do_not\" + 0.075*\"feel\" + 0.053*\"good\" + 0.034*\"cry\" + 0.025*\"question\" + 0.017*\"free\" + 0.017*\"happy\" + 0.016*\"little_bit\" + 0.016*\"nice\" + 0.013*\"bad\"\n",
-      "\n",
-      "\n",
-      "1\n",
-      "0.156*\"live\" + 0.154*\"house\" + 0.113*\"place\" + 0.060*\"move\" + 0.052*\"apartment\" + 0.020*\"my_grandmother\" + 0.014*\"place_where\" + 0.014*\"neighbor\" + 0.013*\"follow\" + 0.013*\"my_grandfather\"\n",
-      "\n",
-      "\n",
-      "2\n",
-      "0.121*\"back\" + 0.070*\"bring\" + 0.055*\"picture\" + 0.055*\"hear\" + 0.055*\"come_back\" + 0.047*\"send\" + 0.031*\"left\" + 0.021*\"my_wife\" + 0.021*\"next_day\" + 0.020*\"carry\"\n",
-      "\n",
-      "\n",
-      "3\n",
-      "0.162*\"could_not\" + 0.039*\"talk_about\" + 0.039*\"close\" + 0.032*\"tape\" + 0.031*\"anymore\" + 0.031*\"stop\" + 0.031*\"change\" + 0.030*\"stand\" + 0.029*\"let_'s\" + 0.028*\"part_of\"\n",
-      "\n",
-      "\n",
-      "4\n",
-      "0.086*\"give\" + 0.072*\"thing\" + 0.065*\"walk\" + 0.065*\"money\" + 0.052*\"start\" + 0.033*\"business\" + 0.021*\"buy\" + 0.021*\"area\" + 0.021*\"passport\" + 0.021*\"sell\"\n",
-      "\n",
-      "\n",
-      "5\n",
-      "0.186*\"family\" + 0.173*\"child\" + 0.090*\"friend\" + 0.067*\"life\" + 0.024*\"message\" + 0.023*\"kind_of\" + 0.022*\"experience\" + 0.021*\"save\" + 0.021*\"feeling\" + 0.020*\"hope\"\n",
-      "\n",
-      "\n",
-      "6\n",
-      "0.112*\"Poland\" + 0.089*\"decide\" + 0.086*\"Israel\" + 0.039*\"wife\" + 0.039*\"meet\" + 0.036*\"England\" + 0.030*\"Palestine\" + 0.030*\"marry\" + 0.027*\"bear\" + 0.025*\"son\"\n",
-      "\n",
-      "\n",
-      "7\n",
-      "0.084*\"find\" + 0.081*\"put\" + 0.040*\"leave_behind\" + 0.036*\"fact\" + 0.023*\"alive\" + 0.018*\"shoe\" + 0.018*\"sick\" + 0.017*\"horse\" + 0.015*\"look_at\" + 0.015*\"line\"\n",
-      "\n",
-      "\n",
-      "8\n",
-      "0.142*\"camp\" + 0.034*\"order\" + 0.026*\"march\" + 0.023*\"guard\" + 0.023*\"concentration_camp\" + 0.021*\"soldier\" + 0.021*\"number\" + 0.018*\"small\" + 0.017*\"prisoner\" + 0.016*\"word\"\n",
-      "\n",
-      "\n",
-      "9\n",
-      "0.119*\"train\" + 0.073*\"give\" + 0.047*\"food\" + 0.039*\"room\" + 0.031*\"eat\" + 0.029*\"clothes\" + 0.027*\"door\" + 0.027*\"open\" + 0.025*\"car\" + 0.025*\"bread\"\n",
-      "\n",
-      "\n",
-      "10\n",
-      "0.091*\"war\" + 0.084*\"school\" + 0.078*\"start\" + 0.074*\"year\" + 0.058*\"Germany\" + 0.037*\"end_of\" + 0.027*\"end\" + 0.022*\"beginning\" + 0.022*\"finish\" + 0.019*\"age\"\n",
-      "\n",
-      "\n",
-      "11\n",
-      "0.311*\"time\" + 0.031*\"week\" + 0.027*\"army\" + 0.027*\"month\" + 0.026*\"wait\" + 0.024*\"speak\" + 0.023*\"over_there\" + 0.023*\"till\" + 0.019*\"couple_of\" + 0.017*\"pick_up\"\n",
-      "\n",
-      "\n",
-      "12\n",
-      "0.066*\"kill\" + 0.055*\"night\" + 0.052*\"run\" + 0.047*\"group\" + 0.039*\"girl\" + 0.038*\"hide\" + 0.035*\"come_back\" + 0.031*\"shoot\" + 0.027*\"village\" + 0.026*\"sit\"\n",
-      "\n",
-      "\n",
-      "13\n",
-      "0.119*\"Jews\" + 0.081*\"german\" + 0.077*\"man\" + 0.061*\"country\" + 0.057*\"woman\" + 0.054*\"jewish\" + 0.026*\"jew\" + 0.021*\"most_of\" + 0.018*\"take_away\" + 0.018*\"Nazis\"\n",
-      "\n",
-      "\n",
-      "14\n",
-      "0.070*\"try_to\" + 0.054*\"Russia\" + 0.053*\"able_to\" + 0.047*\"survive\" + 0.044*\"transport\" + 0.040*\"people_who\" + 0.033*\"kid\" + 0.032*\"France\" + 0.028*\"Europe\" + 0.028*\"escape\"\n",
-      "\n",
-      "\n",
-      "15\n",
-      "0.357*\"people\" + 0.129*\"ghetto\" + 0.074*\"a_lot\" + 0.045*\"jewish\" + 0.032*\"write\" + 0.021*\"polish\" + 0.020*\"dead\" + 0.019*\"how_many\" + 0.018*\"letter\" + 0.015*\"russian\"\n",
-      "\n",
-      "\n",
-      "16\n",
-      "0.212*\"do_not\" + 0.111*\"seconds\" + 0.047*\"my_parent\" + 0.046*\"talk\" + 0.040*\"my_husband\" + 0.031*\"husband\" + 0.028*\"understand\" + 0.021*\"join\" + 0.017*\"guess\" + 0.017*\"turn\"\n",
-      "\n",
-      "\n",
-      "17\n",
-      "0.103*\"Germany\" + 0.052*\"United_States\" + 0.041*\"America\" + 0.041*\"arrive\" + 0.039*\"ship\" + 0.034*\"Vienna\" + 0.029*\"boat\" + 0.029*\"papers\" + 0.025*\"New_York\" + 0.024*\"Holland\"\n",
-      "\n",
-      "\n",
-      "18\n",
-      "0.142*\"day\" + 0.042*\"big\" + 0.034*\"call\" + 0.033*\"suppose\" + 0.030*\"ss\" + 0.028*\"half\" + 0.026*\"guy\" + 0.026*\"Paris\" + 0.023*\"sort_of\" + 0.022*\"person\"\n",
-      "\n",
-      "\n",
-      "19\n",
-      "0.165*\"stay\" + 0.094*\"go_back\" + 0.037*\"of_course\" + 0.035*\"find_out\" + 0.033*\"Berlin\" + 0.032*\"story\" + 0.025*\"reason\" + 0.023*\"later_on\" + 0.022*\"baby\" + 0.020*\"realize\"\n",
-      "\n",
-      "\n",
-      "20\n",
-      "0.150*\"make\" + 0.071*\"parent\" + 0.050*\"Auschwitz\" + 0.043*\"what_happen\" + 0.039*\"point\" + 0.034*\"Warsaw\" + 0.031*\"of_course\" + 0.023*\"my_parent\" + 0.018*\"moment\" + 0.017*\"today\"\n",
-      "\n",
-      "\n",
-      "21\n",
-      "0.188*\"my_mother\" + 0.175*\"my_father\" + 0.085*\"mother\" + 0.070*\"my_brother\" + 0.067*\"brother\" + 0.066*\"father\" + 0.066*\"die\" + 0.065*\"my_sister\" + 0.060*\"sister\" + 0.008*\"grandmother\"\n",
-      "\n",
-      "\n",
-      "22\n",
-      "0.171*\"work\" + 0.069*\"thing\" + 0.042*\"job\" + 0.030*\"hospital\" + 0.023*\"factory\" + 0.021*\"Hitler\" + 0.021*\"doctor\" + 0.020*\"right_away\" + 0.020*\"begin\" + 0.016*\"hard\"\n",
-      "\n",
-      "\n",
-      "23\n",
-      "0.183*\"remember\" + 0.149*\"do_not\" + 0.089*\"happen\" + 0.049*\"morning\" + 0.023*\"early\" + 0.023*\"visit\" + 0.021*\"come_home\" + 0.018*\"evening\" + 0.016*\"must_have\" + 0.014*\"at_home\"\n",
-      "\n",
-      "\n",
-      "24\n",
-      "0.138*\"home\" + 0.103*\"Germans\" + 0.078*\"town\" + 0.047*\"city\" + 0.045*\"Russians\" + 0.040*\"call\" + 0.034*\"afraid\" + 0.026*\"run_away\" + 0.025*\"jf\" + 0.023*\"one_day\"\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
     "for i,element in enumerate(result['topic_documents']):\n",
     "    print (i)\n",
@@ -464,10 +340,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "i=0\n",
     "for text in result['topic_documents'][i]['texts'][0:25]:\n",
@@ -491,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +421,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22And%22%5D+%5B%22I%22%5D+%5B%22left%22%5D+%5B%22really%22%5D+%5B%5D%7B0%2C3%7D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22very%22%5D+%5B%22close%22%5D+%5B%22to%22%5D+%5B%22my%22%5D+%5B%22family%22%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'And I left really -- I was very close to my family ', 'right': '', 'complete_match': 'And I left really -- I was very close to my family ', 'testimony_id': 'HVT-29', 'shelfmark': ['Fortunoff HVT-29'], 'token_start': 7224, 'token_end': 7236}\n"
+      "{'left': '', 'match_word': 'And I left really -- I was very close to my family ', 'right': '', 'complete_match': 'And I left really -- I was very close to my family ', 'testimony_id': 'HVT-29', 'shelfmark': ['Fortunoff Archive HVT-29'], 'token_start': 7221, 'token_end': 7233}\n"
      ]
     }
    ],
@@ -566,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +674,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22started%22%5D+%5B%22crying%22%5D+%5B%22tremendously%22%5D+%5B%5D+%5B%22somebody%22%5D+%5B%22from%22%5D+%5B%22the%22%5D+%5B%22family%22%5D+%5B%5D+%5B%22that%22%5D+%5B%22she%22%5D+%5B%5D+%5B%22leaving%22%5D+%5B%5D+%5B%22and%22%5D+%5B%22nobody%22%5D+%5B%22will%22%5D+%5B%22see%22%5D+%5B%22her%22%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': \"started crying tremendously , somebody from the family , that she 's leaving , and nobody will see her \", 'right': '', 'complete_match': \"started crying tremendously , somebody from the family , that she 's leaving , and nobody will see her \", 'testimony_id': 'usc_shoah_11144', 'shelfmark': ['USC 11144'], 'token_start': 2934, 'token_end': 2953}\n"
+      "{'left': '', 'match_word': \"started crying tremendously , somebody from the family , that she 's leaving , and nobody will see her \", 'right': '', 'complete_match': \"started crying tremendously , somebody from the family , that she 's leaving , and nobody will see her \", 'testimony_id': 'usc_shoah_11144', 'shelfmark': ['USC Shoah Foundation 11144'], 'token_start': 2934, 'token_end': 2953}\n"
      ]
     }
    ],
@@ -819,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +701,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22And%22%5D+%5B%22Mother%22%5D+%5B%22and%22%5D+%5B%22Father%22%5D+%5B%22bravely%22%5D+%5B%22smiled%22%5D+%5B%22at%22%5D+%5B%22us%22%5D+%5B%22until%22%5D+%5B%22the%22%5D+%5B%22time%22%5D+%5B%22came%22%5D+%5B%22for%22%5D+%5B%22the%22%5D+%5B%22train%22%5D+%5B%22to%22%5D+%5B%22leave%22%5D+%5B%5D+%5B%22And%22%5D+%5B%22I%22%5D+%5B%22cried%22%5D+%5B%22impulsively%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'And Mother and Father bravely smiled at us until the time came for the train to leave . And I cried impulsively , ', 'right': '', 'complete_match': 'And Mother and Father bravely smiled at us until the time came for the train to leave . And I cried impulsively , ', 'testimony_id': 'usc_shoah_21626', 'shelfmark': ['USC 21626'], 'token_start': 6881, 'token_end': 6904}\n"
+      "{'left': '', 'match_word': 'And Mother and Father bravely smiled at us until the time came for the train to leave . And I cried impulsively , ', 'right': '', 'complete_match': 'And Mother and Father bravely smiled at us until the time came for the train to leave . And I cried impulsively , ', 'testimony_id': 'usc_shoah_21626', 'shelfmark': ['USC Shoah Foundation 21626'], 'token_start': 6881, 'token_end': 6904}\n"
      ]
     }
    ],
@@ -846,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +728,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22And%22%5D+%5B%22we%22%5D+%5B%22were%22%5D+%5B%22leaving%22%5D+%5B%5D+%5B%22and%22%5D+%5B%22then%22%5D+%5B%22Laura%22%5D+%5B%22turned%22%5D+%5B%22around%22%5D+%5B%22and%22%5D+%5B%5D+%5B%22crying%22%5D+%5B%5D+%5B%22ran%22%5D+%5B%22again%22%5D+%5B%22into%22%5D+%5B%22his%22%5D+%5B%22arms%22%5D+%5B%5D+%5B%22saying%22%5D+%5B%5D%7B0%2C3%7D+%5B%22kissing%22%5D+%5B%22him%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'And we were leaving , and then Laura turned around and , crying , ran again into his arms , saying -- kissing him . ', 'right': '', 'complete_match': 'And we were leaving , and then Laura turned around and , crying , ran again into his arms , saying -- kissing him . ', 'testimony_id': 'usc_shoah_7455', 'shelfmark': ['USC 7455'], 'token_start': 20875, 'token_end': 20900}\n"
+      "{'left': '', 'match_word': 'And we were leaving , and then Laura turned around and , crying , ran again into his arms , saying -- kissing him . ', 'right': '', 'complete_match': 'And we were leaving , and then Laura turned around and , crying , ran again into his arms , saying -- kissing him . ', 'testimony_id': 'usc_shoah_7455', 'shelfmark': ['USC Shoah Foundation 7455'], 'token_start': 20875, 'token_end': 20900}\n"
      ]
     }
    ],
@@ -873,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +819,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22All%22%5D+%5B%22the%22%5D+%5B%22Jews%22%5D+%5B%22got%22%5D+%5B%22killed%22%5D+%5B%5D+%5B%22The%22%5D+%5B%22Jews%22%5D+%5B%22in%22%5D+%5B%22Norden%22%5D+%5B%5D+%5B%22in%22%5D+%5B%22Holland%22%5D+%5B%5D+%5B%22had%22%5D+%5B%22almost%22%5D+%5B%22nobody%22%5D+%5B%22left%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'All the Jews got killed . The Jews in Norden , in Holland , had almost nobody left . ', 'right': '', 'complete_match': 'All the Jews got killed . The Jews in Norden , in Holland , had almost nobody left . ', 'testimony_id': 'HVT-42', 'shelfmark': ['Fortunoff HVT-42'], 'token_start': 10563, 'token_end': 10582}\n"
+      "{'left': '', 'match_word': 'All the Jews got killed . The Jews in Norden , in Holland , had almost nobody left . ', 'right': '', 'complete_match': 'All the Jews got killed . The Jews in Norden , in Holland , had almost nobody left . ', 'testimony_id': 'HVT-42', 'shelfmark': ['Fortunoff Archive HVT-42'], 'token_start': 10557, 'token_end': 10576}\n"
      ]
     }
    ],
@@ -964,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +900,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22And%22%5D+%5B%22there%22%5D+%5B%22was%22%5D+%5B%22nobody%22%5D+%5B%22left%22%5D+%5B%5D+%5B%22Everybody%22%5D+%5B%22was%22%5D+%5B%22killed%22%5D+%5B%22that%22%5D+%5B%22night%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'And there was nobody left . Everybody was killed that night . ', 'right': '', 'complete_match': 'And there was nobody left . Everybody was killed that night . ', 'testimony_id': 'usc_shoah_2316', 'shelfmark': ['USC 2316'], 'token_start': 15159, 'token_end': 15171}\n"
+      "{'left': '', 'match_word': 'And there was nobody left . Everybody was killed that night . ', 'right': '', 'complete_match': 'And there was nobody left . Everybody was killed that night . ', 'testimony_id': 'usc_shoah_2316', 'shelfmark': ['USC Shoah Foundation 2316'], 'token_start': 15159, 'token_end': 15171}\n"
      ]
     }
    ],
@@ -1045,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
