--- a/mine_fragments_numbness.ipynb
+++ b/mine_fragments_numbness.ipynb
@@ -289,7 +289,7 @@
    ],
    "source": [
     "main_node = \"numbness\"\n",
-    "#delete_main_node(\"numbness\")\n",
+    "delete_main_node(main_node)\n",
     "add_main_node('numbness')"
    ]
   },
@@ -423,7 +423,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%5D%7B0%2C3%7D+%5B%22PAUSES%22%5D+%5B%22FOR%22%5D+%5B%223%22%5D+%5B%22SECONDS%22%5D+%5B%5D%7B0%2C3%7D+%5B%22Then%22%5D+%5B%22they%22%5D+%5B%22said%22%5D+%5B%5D+%5B%22you%22%5D+%5B%5D+%5B%22out%22%5D+%5B%22of%22%5D+%5B%22luck%22%5D+%5B%22because%22%5D+%5B%22we%22%5D+%5B%5D+%5B%22going%22%5D+%5B%22to%22%5D+%5B%22kill%22%5D+%5B%22you%22%5D+%5B%22all%22%5D+%5B%5D+%5B%5D%7B0%2C3%7D+%5B%22PAUSES%22%5D+%5B%22FOR%22%5D+%5B%224%22%5D+%5B%22SECONDS%22%5D+%5B%5D%7B0%2C3%7D+%5B%22We%22%5D+%5B%5D%7B0%2C3%7D+%5B%22PAUSES%22%5D+%5B%22FOR%22%5D+%5B%224%22%5D+%5B%22SECONDS%22%5D+%5B%5D%7B0%2C3%7D+%5B%22were%22%5D+%5B%22numb%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': \"men . [ PAUSES FOR 3 SECONDS ] Then they said , you 're out of luck because we 're going to kill you all . [ PAUSES FOR 4 SECONDS ] We [ PAUSES FOR 4 SECONDS ] were numb . \", 'right': '', 'complete_match': \"men . [ PAUSES FOR 3 SECONDS ] Then they said , you 're out of luck because we 're going to kill you all . [ PAUSES FOR 4 SECONDS ] We [ PAUSES FOR 4 SECONDS ] were numb . \", 'testimony_id': 'usc_shoah_27347', 'shelfmark': ['USC 27347'], 'token_start': 10944, 'token_end': 10986}\n"
+      "{'left': '', 'match_word': \"men . [ PAUSES FOR 3 SECONDS ] Then they said , you 're out of luck because we 're going to kill you all . [ PAUSES FOR 4 SECONDS ] We [ PAUSES FOR 4 SECONDS ] were numb . \", 'right': '', 'complete_match': \"men . [ PAUSES FOR 3 SECONDS ] Then they said , you 're out of luck because we 're going to kill you all . [ PAUSES FOR 4 SECONDS ] We [ PAUSES FOR 4 SECONDS ] were numb . \", 'testimony_id': 'usc_shoah_27347', 'shelfmark': ['USC Shoah Foundation 27347'], 'token_start': 10944, 'token_end': 10986}\n"
      ]
     }
    ],
@@ -477,7 +477,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22And%22%5D+%5B%22we%22%5D+%5B%22were%22%5D+%5B%22so%22%5D+%5B%22numb%22%5D+%5B%5D+%5B%5D%7B0%2C3%7D+%5B%5D+%5B%22Cathy%22%5D+%5B%5D+%5B%5D%7B0%2C3%7D+%5B%22every%22%5D+%5B%2210%22%5D+%5B%22people%22%5D+%5B%22get%22%5D+%5B%22killed%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'And we were so numb , [ ? Cathy ? ] every 10 people get killed . ', 'right': '', 'complete_match': 'And we were so numb , [ ? Cathy ? ] every 10 people get killed . ', 'testimony_id': 'usc_shoah_25287', 'shelfmark': ['USC 25287'], 'token_start': 16040, 'token_end': 16057}\n"
+      "{'left': '', 'match_word': 'And we were so numb , [ ? Cathy ? ] every 10 people get killed . ', 'right': '', 'complete_match': 'And we were so numb , [ ? Cathy ? ] every 10 people get killed . ', 'testimony_id': 'usc_shoah_25287', 'shelfmark': ['USC Shoah Foundation 25287'], 'token_start': 16040, 'token_end': 16057}\n"
      ]
     }
    ],
@@ -504,7 +504,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22from%22%5D+%5B%22people%22%5D+%5B%22being%22%5D+%5B%22wounded%22%5D+%5B%5D+%5B%22from%22%5D+%5B%22people%22%5D+%5B%22being%22%5D+%5B%22killed%22%5D+%5B%5D+%5B%22from%22%5D+%5B%22cries%22%5D+%5B%5D+%5B%22And%22%5D+%5B%22finally%22%5D+%5B%5D+%5B%22everything%22%5D+%5B%22subsided%22%5D+%5B%5D+%5B%22But%22%5D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22alive%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22did%22%5D+%5B%5D+%5B%5D%7B0%2C3%7D+%5B%22I%22%5D+%5B%22did%22%5D+%5B%5D+%5B%22even%22%5D+%5B%22think%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22numb%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': \"from people being wounded , from people being killed , from cries . And finally , everything subsided . But I was alive . I did n't -- I did n't even think . I was numb . \", 'right': '', 'complete_match': \"from people being wounded , from people being killed , from cries . And finally , everything subsided . But I was alive . I did n't -- I did n't even think . I was numb . \", 'testimony_id': 'usc_shoah_2590', 'shelfmark': ['USC 2590'], 'token_start': 6362, 'token_end': 6400}\n"
+      "{'left': '', 'match_word': \"from people being wounded , from people being killed , from cries . And finally , everything subsided . But I was alive . I did n't -- I did n't even think . I was numb . \", 'right': '', 'complete_match': \"from people being wounded , from people being killed , from cries . And finally , everything subsided . But I was alive . I did n't -- I did n't even think . I was numb . \", 'testimony_id': 'usc_shoah_2590', 'shelfmark': ['USC Shoah Foundation 2590'], 'token_start': 6362, 'token_end': 6400}\n"
      ]
     }
    ],
@@ -586,7 +586,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22I%22%5D+%5B%22was%22%5D+%5B%22in%22%5D+%5B%22complete%22%5D+%5B%22shock%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22numb%22%5D+%5B%5D+%5B%22nothing%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'I was in complete shock . I was numb , nothing . ', 'right': '', 'complete_match': 'I was in complete shock . I was numb , nothing . ', 'testimony_id': 'HVT-108', 'shelfmark': ['Fortunoff HVT-108'], 'token_start': 4794, 'token_end': 4806}\n"
+      "{'left': '', 'match_word': 'I was in complete shock . I was numb , nothing . ', 'right': '', 'complete_match': 'I was in complete shock . I was numb , nothing . ', 'testimony_id': 'HVT-108', 'shelfmark': ['Fortunoff Archive HVT-108'], 'token_start': 4791, 'token_end': 4803}\n"
      ]
     }
    ],
@@ -640,7 +640,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22You%22%5D+%5B%22are%22%5D+%5B%22numb%22%5D+%5B%5D+%5B%22You%22%5D+%5B%5D+%5B%22shocked%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': \"You are numb . You 're shocked . \", 'right': '', 'complete_match': \"You are numb . You 're shocked . \", 'testimony_id': 'usc_shoah_10358', 'shelfmark': ['USC 10358'], 'token_start': 3799, 'token_end': 3807}\n"
+      "{'left': '', 'match_word': \"You are numb . You 're shocked . \", 'right': '', 'complete_match': \"You are numb . You 're shocked . \", 'testimony_id': 'usc_shoah_10358', 'shelfmark': ['USC Shoah Foundation 10358'], 'token_start': 3799, 'token_end': 3807}\n"
      ]
     }
    ],
@@ -667,7 +667,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22And%22%5D+%5B%5D%7B0%2C3%7D+%5B%22PAUSES%22%5D+%5B%22FOR%22%5D+%5B%224%22%5D+%5B%22SECONDS%22%5D+%5B%5D%7B0%2C3%7D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22numb%22%5D+%5B%22when%22%5D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22there%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22%27ll%22%5D+%5B%22be%22%5D+%5B%22very%22%5D+%5B%22honest%22%5D+%5B%22with%22%5D+%5B%22you%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22not%22%5D+%5B%5D%7B0%2C3%7D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22somewhat%22%5D+%5B%22in%22%5D+%5B%22a%22%5D+%5B%22state%22%5D+%5B%22of%22%5D+%5B%22shock%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': \"And [ PAUSES FOR 4 SECONDS ] I was numb when I was there . I 'll be very honest with you . I was not -- I was somewhat in a state of shock . \", 'right': '', 'complete_match': \"And [ PAUSES FOR 4 SECONDS ] I was numb when I was there . I 'll be very honest with you . I was not -- I was somewhat in a state of shock . \", 'testimony_id': 'usc_shoah_24163', 'shelfmark': ['USC 24163'], 'token_start': 22536, 'token_end': 22572}\n"
+      "{'left': '', 'match_word': \"And [ PAUSES FOR 4 SECONDS ] I was numb when I was there . I 'll be very honest with you . I was not -- I was somewhat in a state of shock . \", 'right': '', 'complete_match': \"And [ PAUSES FOR 4 SECONDS ] I was numb when I was there . I 'll be very honest with you . I was not -- I was somewhat in a state of shock . \", 'testimony_id': 'usc_shoah_24163', 'shelfmark': ['USC Shoah Foundation 24163'], 'token_start': 22536, 'token_end': 22572}\n"
      ]
     }
    ],
@@ -694,7 +694,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22I%22%5D+%5B%22was%22%5D+%5B%2215%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22shocked%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'I was 15 . I was shocked . ', 'right': '', 'complete_match': 'I was 15 . I was shocked . ', 'testimony_id': 'usc_shoah_24470', 'shelfmark': ['USC 24470'], 'token_start': 7698, 'token_end': 7706}\n"
+      "{'left': '', 'match_word': 'I was 15 . I was shocked . ', 'right': '', 'complete_match': 'I was 15 . I was shocked . ', 'testimony_id': 'usc_shoah_24470', 'shelfmark': ['USC Shoah Foundation 24470'], 'token_start': 7698, 'token_end': 7706}\n"
      ]
     }
    ],
@@ -1014,7 +1014,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22I%22%5D+%5B%22saw%22%5D+%5B%22parents%22%5D+%5B%22who%22%5D+%5B%22lost%22%5D+%5B%22their%22%5D+%5B%22children%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22saw%22%5D+%5B%22husbands%22%5D+%5B%22who%22%5D+%5B%22lost%22%5D+%5B%22their%22%5D+%5B%22wives%22%5D+%5B%22and%22%5D+%5B%22vise%22%5D+%5B%22versa%22%5D+%5B%5D+%5B%22and%22%5D+%5B%22they%22%5D+%5B%22were%22%5D+%5B%22numbed%22%5D+%5B%5D+%5B%22actually%22%5D+%5B%5D+%5B%22to%22%5D+%5B%5D%7B0%2C3%7D+%5B%22they%22%5D+%5B%22did%22%5D+%5B%5D+%5B%22complain%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': \"I saw parents who lost their children . I saw husbands who lost their wives and vise versa , and they were numbed , actually , to -- they did n't complain . \", 'right': '', 'complete_match': \"I saw parents who lost their children . I saw husbands who lost their wives and vise versa , and they were numbed , actually , to -- they did n't complain . \", 'testimony_id': 'HVT-44', 'shelfmark': ['Fortunoff HVT-44'], 'token_start': 7520, 'token_end': 7553}\n"
+      "{'left': '', 'match_word': \"I saw parents who lost their children . I saw husbands who lost their wives and vise versa , and they were numbed , actually , to -- they did n't complain . \", 'right': '', 'complete_match': \"I saw parents who lost their children . I saw husbands who lost their wives and vise versa , and they were numbed , actually , to -- they did n't complain . \", 'testimony_id': 'HVT-44', 'shelfmark': ['Fortunoff Archive HVT-44'], 'token_start': 7511, 'token_end': 7544}\n"
      ]
     }
    ],
@@ -1097,7 +1097,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22MR%22%5D+%5B%22%3A%22%5D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22so%22%5D+%5B%22numb%22%5D+%5B%22that%22%5D+%5B%22I%22%5D+%5B%22do%22%5D+%5B%5D+%5B%22even%22%5D+%5B%22know%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22all%22%5D+%5B%22numb%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22lost%22%5D+%5B%22everybody%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': \"MR : I was so numb that I do n't even know . I was all numb . I lost everybody . \", 'right': '', 'complete_match': \"MR : I was so numb that I do n't even know . I was all numb . I lost everybody . \", 'testimony_id': 'usc_shoah_198', 'shelfmark': ['USC 198'], 'token_start': 8130, 'token_end': 8152}\n"
+      "{'left': '', 'match_word': \"MR : I was so numb that I do n't even know . I was all numb . I lost everybody . \", 'right': '', 'complete_match': \"MR : I was so numb that I do n't even know . I was all numb . I lost everybody . \", 'testimony_id': 'usc_shoah_198', 'shelfmark': ['USC Shoah Foundation 198'], 'token_start': 8130, 'token_end': 8152}\n"
      ]
     }
    ],
@@ -1212,7 +1212,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22We%22%5D+%5B%22were%22%5D+%5B%22numb%22%5D+%5B%5D+%5B%22The%22%5D+%5B%22five%22%5D+%5B%22years%22%5D+%5B%22there%22%5D+%5B%22were%22%5D+%5B%22no%22%5D+%5B%22feelings%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'We were numb . The five years there were no feelings . ', 'right': '', 'complete_match': 'We were numb . The five years there were no feelings . ', 'testimony_id': 'HVT-81', 'shelfmark': ['Fortunoff HVT-81'], 'token_start': 8935, 'token_end': 8947}\n"
+      "{'left': '', 'match_word': 'We were numb . The five years there were no feelings . ', 'right': '', 'complete_match': 'We were numb . The five years there were no feelings . ', 'testimony_id': 'HVT-81', 'shelfmark': ['Fortunoff Archive HVT-81'], 'token_start': 8917, 'token_end': 8929}\n"
      ]
     }
    ],
@@ -1293,7 +1293,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22The%22%5D+%5B%22were%22%5D+%5B%22no%22%5D+%5B%22feelings%22%5D+%5B%5D+%5B%22You%22%5D+%5B%22were%22%5D+%5B%22completely%22%5D+%5B%22numb%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'The were no feelings . You were completely numb . ', 'right': '', 'complete_match': 'The were no feelings . You were completely numb . ', 'testimony_id': 'HVT-36', 'shelfmark': ['Fortunoff HVT-36'], 'token_start': 5363, 'token_end': 5373}\n"
+      "{'left': '', 'match_word': 'The were no feelings . You were completely numb . ', 'right': '', 'complete_match': 'The were no feelings . You were completely numb . ', 'testimony_id': 'HVT-36', 'shelfmark': ['Fortunoff Archive HVT-36'], 'token_start': 5354, 'token_end': 5364}\n"
      ]
     }
    ],
@@ -1466,7 +1466,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22But%22%5D+%5B%22I%22%5D+%5B%5D%7B0%2C3%7D+%5B%22at%22%5D+%5B%22that%22%5D+%5B%22time%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22like%22%5D+%5B%5D%7B0%2C3%7D+%5B%22I%22%5D+%5B%22felt%22%5D+%5B%22like%22%5D+%5B%22I%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%5D%7B0%2C3%7D+%5B%22I%22%5D+%5B%22could%22%5D+%5B%5D+%5B%22even%22%5D+%5B%22cry%22%5D+%5B%22anymore%22%5D+%5B%5D+%5B%22Just%22%5D+%5B%22could%22%5D+%5B%5D+%5B%5D+%5B%22I%22%5D+%5B%22mean%22%5D+%5B%5D+%5B%22there%22%5D+%5B%22just%22%5D+%5B%5D%7B0%2C3%7D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22numb%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': \"But I -- at that time , I was like -- I felt like I , I was -- I could n't even cry anymore . Just could n't . I mean , there just -- I was numb . \", 'right': '', 'complete_match': \"But I -- at that time , I was like -- I felt like I , I was -- I could n't even cry anymore . Just could n't . I mean , there just -- I was numb . \", 'testimony_id': 'usc_shoah_22892', 'shelfmark': ['USC 22892'], 'token_start': 8452, 'token_end': 8492}\n"
+      "{'left': '', 'match_word': \"But I -- at that time , I was like -- I felt like I , I was -- I could n't even cry anymore . Just could n't . I mean , there just -- I was numb . \", 'right': '', 'complete_match': \"But I -- at that time , I was like -- I felt like I , I was -- I could n't even cry anymore . Just could n't . I mean , there just -- I was numb . \", 'testimony_id': 'usc_shoah_22892', 'shelfmark': ['USC Shoah Foundation 22892'], 'token_start': 8452, 'token_end': 8492}\n"
      ]
     }
    ],
@@ -1493,7 +1493,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22And%22%5D+%5B%22after%22%5D+%5B%22about%22%5D+%5B%22four%22%5D+%5B%22hours%22%5D+%5B%5D%7B0%2C3%7D+%5B%22and%22%5D+%5B%22I%22%5D+%5B%22probably%22%5D+%5B%22was%22%5D+%5B%22numb%22%5D+%5B%22%3B%22%5D+%5B%22I%22%5D+%5B%22could%22%5D+%5B%5D+%5B%22cry%22%5D+%5B%22or%22%5D+%5B%22say%22%5D+%5B%5D%7B0%2C3%7D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': \"And after about four hours -- and I probably was numb ; I could n't cry or say [ \", 'right': '', 'complete_match': \"And after about four hours -- and I probably was numb ; I could n't cry or say [ \", 'testimony_id': 'usc_shoah_6845', 'shelfmark': ['USC 6845'], 'token_start': 6497, 'token_end': 6516}\n"
+      "{'left': '', 'match_word': \"And after about four hours -- and I probably was numb ; I could n't cry or say [ \", 'right': '', 'complete_match': \"And after about four hours -- and I probably was numb ; I could n't cry or say [ \", 'testimony_id': 'usc_shoah_6845', 'shelfmark': ['USC Shoah Foundation 6845'], 'token_start': 6497, 'token_end': 6516}\n"
      ]
     }
    ],
