--- a/mine_fragments_rape.ipynb
+++ b/mine_fragments_rape.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
    ],
    "source": [
     "main_node = \"rape\"\n",
-    "#delete_main_node(main_node)\n",
+    "delete_main_node(main_node)\n",
     "add_main_node(main_node)"
    ]
   },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22Sometimes%22%5D+%5B%5D+%5B%22they%22%5D+%5B%22raped%22%5D+%5B%22them%22%5D+%5B%5D+%5B%22They%22%5D+%5B%22killed%22%5D+%5B%22them%22%5D+%5B%22right%22%5D+%5B%22away%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'Sometimes , they raped them . They killed them right away . ', 'right': '', 'complete_match': 'Sometimes , they raped them . They killed them right away . ', 'testimony_id': 'usc_shoah_2590', 'shelfmark': ['USC 2590'], 'token_start': 1782, 'token_end': 1794}\n"
+      "{'left': '', 'match_word': 'Sometimes , they raped them . They killed them right away . ', 'right': '', 'complete_match': 'Sometimes , they raped them . They killed them right away . ', 'testimony_id': 'usc_shoah_2590', 'shelfmark': ['USC Shoah Foundation 2590'], 'token_start': 1782, 'token_end': 1794}\n"
      ]
     }
    ],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22The%22%5D+%5B%22night%22%5D+%5B%22that%22%5D+%5B%22they%22%5D+%5B%22marched%22%5D+%5B%22into%22%5D+%5B%22Jasionowka%22%5D+%5B%5D+%5B%22we%22%5D+%5B%22heard%22%5D+%5B%22rumors%22%5D+%5B%5D+%5B%22even%22%5D+%5B%22before%22%5D+%5B%5D+%5B%22that%22%5D+%5B%22wherever%22%5D+%5B%22they%22%5D+%5B%22marched%22%5D+%5B%22in%22%5D+%5B%5D+%5B%22they%22%5D+%5B%22burned%22%5D+%5B%5D+%5B%22they%22%5D+%5B%22killed%22%5D+%5B%5D+%5B%22they%22%5D+%5B%22raped%22%5D+%5B%5D+%5B%22and%22%5D+%5B%22they%22%5D+%5B%22did%22%5D+%5B%22horrible%22%5D+%5B%22things%22%5D+%5B%22to%22%5D+%5B%22the%22%5D+%5B%22Jewish%22%5D+%5B%22people%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'The night that they marched into Jasionowka , we heard rumors , even before , that wherever they marched in , they burned , they killed , they raped , and they did horrible things to the Jewish people . ', 'right': '', 'complete_match': 'The night that they marched into Jasionowka , we heard rumors , even before , that wherever they marched in , they burned , they killed , they raped , and they did horrible things to the Jewish people . ', 'testimony_id': 'usc_shoah_7458', 'shelfmark': ['USC 7458'], 'token_start': 6791, 'token_end': 6831}\n"
+      "{'left': '', 'match_word': 'The night that they marched into Jasionowka , we heard rumors , even before , that wherever they marched in , they burned , they killed , they raped , and they did horrible things to the Jewish people . ', 'right': '', 'complete_match': 'The night that they marched into Jasionowka , we heard rumors , even before , that wherever they marched in , they burned , they killed , they raped , and they did horrible things to the Jewish people . ', 'testimony_id': 'usc_shoah_7458', 'shelfmark': ['USC Shoah Foundation 7458'], 'token_start': 6791, 'token_end': 6831}\n"
      ]
     }
    ],
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22She%22%5D+%5B%22saw%22%5D+%5B%22her%22%5D+%5B%22mother%22%5D+%5B%22raped%22%5D+%5B%22to%22%5D+%5B%22death%22%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'She saw her mother raped to death ', 'right': '', 'complete_match': 'She saw her mother raped to death ', 'testimony_id': 'usc_shoah_14900', 'shelfmark': ['USC 14900'], 'token_start': 15674, 'token_end': 15681}\n"
+      "{'left': '', 'match_word': 'She saw her mother raped to death ', 'right': '', 'complete_match': 'She saw her mother raped to death ', 'testimony_id': 'usc_shoah_14900', 'shelfmark': ['USC Shoah Foundation 14900'], 'token_start': 15674, 'token_end': 15681}\n"
      ]
     }
    ],
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22And%22%5D+%5B%22I%22%5D+%5B%22watched%22%5D+%5B%22them%22%5D+%5B%22rape%22%5D+%5B%22the%22%5D+%5B%22women%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'And I watched them rape the women . ', 'right': '', 'complete_match': 'And I watched them rape the women . ', 'testimony_id': 'usc_shoah_162', 'shelfmark': ['USC 162'], 'token_start': 7990, 'token_end': 7998}\n"
+      "{'left': '', 'match_word': 'And I watched them rape the women . ', 'right': '', 'complete_match': 'And I watched them rape the women . ', 'testimony_id': 'usc_shoah_162', 'shelfmark': ['USC Shoah Foundation 162'], 'token_start': 7990, 'token_end': 7998}\n"
      ]
     }
    ],
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22that%22%5D+%5B%5D+%5B%22the%22%5D+%5B%22one%22%5D+%5B%5D+%5B%22she%22%5D+%5B%22was%22%5D+%5B%22raped%22%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': \"that 's the one , she was raped \", 'right': '', 'complete_match': \"that 's the one , she was raped \", 'testimony_id': 'usc_shoah_1222', 'shelfmark': ['USC 1222'], 'token_start': 2189, 'token_end': 2197}\n"
+      "{'left': '', 'match_word': \"that 's the one , she was raped \", 'right': '', 'complete_match': \"that 's the one , she was raped \", 'testimony_id': 'usc_shoah_1222', 'shelfmark': ['USC Shoah Foundation 1222'], 'token_start': 2189, 'token_end': 2197}\n"
      ]
     }
    ],
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22They%22%5D+%5B%22probably%22%5D+%5B%22raped%22%5D+%5B%22them%22%5D+%5B%5D+%5B%22abused%22%5D+%5B%22them%22%5D+%5B%5D+%5B%22eventually%22%5D+%5B%22shot%22%5D+%5B%22them%22%5D+%5B%22because%22%5D+%5B%22nobody%22%5D+%5B%22survived%22%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'They probably raped them , abused them , eventually shot them because nobody survived ', 'right': '', 'complete_match': 'They probably raped them , abused them , eventually shot them because nobody survived ', 'testimony_id': 'usc_shoah_10406', 'shelfmark': ['USC 10406'], 'token_start': 20350, 'token_end': 20364}\n"
+      "{'left': '', 'match_word': 'They probably raped them , abused them , eventually shot them because nobody survived ', 'right': '', 'complete_match': 'They probably raped them , abused them , eventually shot them because nobody survived ', 'testimony_id': 'usc_shoah_10406', 'shelfmark': ['USC Shoah Foundation 10406'], 'token_start': 20350, 'token_end': 20364}\n"
      ]
     }
    ],
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22was%22%5D+%5B%22raped%22%5D+%5B%22and%22%5D+%5B%22shot%22%5D+%5B%22in%22%5D+%5B%22the%22%5D+%5B%22middle%22%5D+%5B%22of%22%5D+%5B%22the%22%5D+%5B%22street%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'was raped and shot in the middle of the street . ', 'right': '', 'complete_match': 'was raped and shot in the middle of the street . ', 'testimony_id': 'usc_shoah_11593', 'shelfmark': ['USC 11593'], 'token_start': 3721, 'token_end': 3732}\n"
+      "{'left': '', 'match_word': 'was raped and shot in the middle of the street . ', 'right': '', 'complete_match': 'was raped and shot in the middle of the street . ', 'testimony_id': 'usc_shoah_11593', 'shelfmark': ['USC Shoah Foundation 11593'], 'token_start': 3721, 'token_end': 3732}\n"
      ]
     }
    ],
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22I%22%5D+%5B%22know%22%5D+%5B%22she%22%5D+%5B%22was%22%5D+%5B%22raped%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22know%22%5D+%5B%22that%22%5D+%5B%22they%22%5D+%5B%22put%22%5D+%5B%22a%22%5D+%5B%22big%22%5D+%5B%22stick%22%5D+%5B%22through%22%5D+%5B%22her%22%5D+%5B%22genitals%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22know%22%5D+%5B%22that%22%5D+%5B%22they%22%5D+%5B%22tortured%22%5D+%5B%22her%22%5D+%5B%22before%22%5D+%5B%22they%22%5D+%5B%22shot%22%5D+%5B%22her%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'I know she was raped . I know that they put a big stick through her genitals . I know that they tortured her before they shot her . ', 'right': '', 'complete_match': 'I know she was raped . I know that they put a big stick through her genitals . I know that they tortured her before they shot her . ', 'testimony_id': 'usc_shoah_5799', 'shelfmark': ['USC 5799'], 'token_start': 5010, 'token_end': 5039}\n"
+      "{'left': '', 'match_word': 'I know she was raped . I know that they put a big stick through her genitals . I know that they tortured her before they shot her . ', 'right': '', 'complete_match': 'I know she was raped . I know that they put a big stick through her genitals . I know that they tortured her before they shot her . ', 'testimony_id': 'usc_shoah_5799', 'shelfmark': ['USC Shoah Foundation 5799'], 'token_start': 5010, 'token_end': 5039}\n"
      ]
     }
    ],
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
      "output_type": "stream",
      "text": [
       "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22I%22%5D+%5B%22did%22%5D+%5B%22not%22%5D+%5B%22know%22%5D+%5B%22what%22%5D+%5B%22rape%22%5D+%5B%22meant%22%5D+%5B%5D+%5B%22but%22%5D+%5B%22I%22%5D+%5B%22knew%22%5D+%5B%22it%22%5D+%5B%22was%22%5D+%5B%22something%22%5D+%5B%22that%22%5D+%5B%22women%22%5D+%5B%22were%22%5D+%5B%22afraid%22%5D+%5B%22of%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'I did not know what rape meant , but I knew it was something that women were afraid of . ', 'right': '', 'complete_match': 'I did not know what rape meant , but I knew it was something that women were afraid of . ', 'testimony_id': 'HVT-123', 'shelfmark': ['Fortunoff HVT-123'], 'token_start': 12222, 'token_end': 12242}\n"
+      "{'left': '', 'match_word': 'I did not know what rape meant , but I knew it was something that women were afraid of . ', 'right': '', 'complete_match': 'I did not know what rape meant , but I knew it was something that women were afraid of . ', 'testimony_id': 'HVT-123', 'shelfmark': ['Fortunoff Archive HVT-123'], 'token_start': 12219, 'token_end': 12239}\n"
      ]
     }
    ],
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
