--- a/mine_fragments_run_scream.ipynb
+++ b/mine_fragments_run_scream.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,22 +275,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/miniconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: DeprecationWarning: insert is deprecated. Use insert_one or insert_many instead.\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "main_node = \"\"\n",
+    "main_node = \"run\"\n",
     "#delete_main_node(main_node)\n",
-    "add_main_node(main_node)"
+    "#add_main_node(main_node)"
    ]
   },
   {
@@ -301,19 +292,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 110,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "query = ''"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "result = topic_concordancer.main(query,window=50,topicn=25)"
    ]
@@ -326,10 +313,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "for i,element in enumerate(result['topic_documents']):\n",
     "    print (i)\n",
@@ -346,10 +331,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "i=0\n",
     "for text in result['topic_documents'][i]['texts'][0:25]:\n",
@@ -373,43 +356,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lemmas = []"
+    "lemmas = ['scream','run']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "([lemma=\"kill\"][]{0,50}[lemma=\"numb\"])|([lemma=\"numb\"][]{0,50}[lemma=\"kill\"])\n"
+      "([lemma=\"scream\"][]{0,25}[lemma=\"run\"])|([lemma=\"run\"][]{0,25}[lemma=\"scream\"])\n"
      ]
     }
    ],
    "source": [
-    "query = create_contextual_query(lemmas,context_length=50)\n",
+    "query = create_contextual_query(lemmas,context_length=25)\n",
     "print (query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "domain_term = \"\""
+    "domain_term = \"scream\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,22 +404,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%5D%7B0%2C3%7D+%5B%22PAUSES%22%5D+%5B%22FOR%22%5D+%5B%223%22%5D+%5B%22SECONDS%22%5D+%5B%5D%7B0%2C3%7D+%5B%22Then%22%5D+%5B%22they%22%5D+%5B%22said%22%5D+%5B%5D+%5B%22you%22%5D+%5B%5D+%5B%22out%22%5D+%5B%22of%22%5D+%5B%22luck%22%5D+%5B%22because%22%5D+%5B%22we%22%5D+%5B%5D+%5B%22going%22%5D+%5B%22to%22%5D+%5B%22kill%22%5D+%5B%22you%22%5D+%5B%22all%22%5D+%5B%5D+%5B%5D%7B0%2C3%7D+%5B%22PAUSES%22%5D+%5B%22FOR%22%5D+%5B%224%22%5D+%5B%22SECONDS%22%5D+%5B%5D%7B0%2C3%7D+%5B%22We%22%5D+%5B%5D%7B0%2C3%7D+%5B%22PAUSES%22%5D+%5B%22FOR%22%5D+%5B%224%22%5D+%5B%22SECONDS%22%5D+%5B%5D%7B0%2C3%7D+%5B%22were%22%5D+%5B%22numb%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': \"men . [ PAUSES FOR 3 SECONDS ] Then they said , you 're out of luck because we 're going to kill you all . [ PAUSES FOR 4 SECONDS ] We [ PAUSES FOR 4 SECONDS ] were numb . \", 'right': '', 'complete_match': \"men . [ PAUSES FOR 3 SECONDS ] Then they said , you 're out of luck because we 're going to kill you all . [ PAUSES FOR 4 SECONDS ] We [ PAUSES FOR 4 SECONDS ] were numb . \", 'testimony_id': 'usc_shoah_27347', 'shelfmark': ['USC 27347'], 'token_start': 10944, 'token_end': 10986}\n"
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22You%22%5D+%5B%22know%22%5D+%5B%5D+%5B%22of%22%5D+%5B%22people%22%5D+%5B%22running%22%5D+%5B%22and%22%5D+%5B%22screaming%22%5D+%5B%22and%22%5D+%5B%22falling%22%5D+%5B%22and%22%5D+%5B%22the%22%5D+%5B%5D%7B0%2C3%7D+%5B%22you%22%5D+%5B%22know%22%5D+%5B%22and%22%5D+%5B%22this%22%5D+%5B%22is%22%5D+%5B%22incredible%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': 'You know , of people running and screaming and falling and the schnell-schnell-schnell you know and this is incredible . ', 'right': '', 'complete_match': 'You know , of people running and screaming and falling and the schnell-schnell-schnell you know and this is incredible . ', 'testimony_id': 'HVT-78', 'shelfmark': ['Fortunoff Archive HVT-78'], 'token_start': 16132, 'token_end': 16152}\n"
      ]
     }
    ],
    "source": [
     "fragment_1 = {}\n",
-    "fragment_1['original_sentence'] = \"\"\n",
-    "fragment_1['label']=\"\"\n",
+    "fragment_1['original_sentence'] = \"You know, of people running and screaming and falling and the schnell-schnell-schnell you know and this is incredible.\"\n",
+    "fragment_1['label']=\"(..) people running and screaming and falling and the schnell-schnell-schnell (..).\"\n",
     "indices = find_sentence_id(fragment_1['original_sentence'])\n",
     "fragment_1['start_sentence_index']=indices[0]\n",
     "fragment_1['end_sentence_index']=indices[1]\n",
@@ -448,22 +431,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22To%22%5D+%5B%22see%22%5D+%5B%22another%22%5D+%5B%5D+%5B%22Jews%22%5D+%5B%22come%22%5D+%5B%22and%22%5D+%5B%22be%22%5D+%5B%22killed%22%5D+%5B%5D+%5B%22another%22%5D+%5B%5D+%5B%22be%22%5D+%5B%22killed%22%5D+%5B%5D+%5B%22That%22%5D+%5B%22was%22%5D+%5B%22not%22%5D+%5B%5D%7B0%2C50%7D+%5B%22that%22%5D+%5B%22we%22%5D+%5B%22wanted%22%5D+%5B%22to%22%5D+%5B%22see%22%5D+%5B%5D+%5B%22You%22%5D+%5B%22know%22%5D+%5B%5D+%5B%22We%22%5D+%5B%22had%22%5D+%5B%22to%22%5D+%5B%5D+%5B%22Then%22%5D+%5B%22after%22%5D+%5B%22awhile%22%5D+%5B%22you%22%5D+%5B%22become%22%5D+%5B%22so%22%5D+%5B%22numb%22%5D+%5B%22that%22%5D+%5B%22you%22%5D+%5B%22just%22%5D+%5B%5D%7B0%2C50%7D+%5B%22you%22%5D+%5B%22do%22%5D+%5B%5D+%5B%22react%22%5D+%5B%5D+%5B%22you%22%5D+%5B%5D%7B0%2C50%7D+%5B%22you%22%5D+%5B%22know%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': \"To see another 10,000 Jews come and be killed , another 20,000 be killed ? That was not ... that we wanted to see . You know . We had to . Then after awhile you become so numb that you just ... you do n't react , you ... you know ? \", 'right': '', 'complete_match': \"To see another 10,000 Jews come and be killed , another 20,000 be killed ? That was not ... that we wanted to see . You know . We had to . Then after awhile you become so numb that you just ... you do n't react , you ... you know ? \", 'testimony_id': 'irn504680', 'shelfmark': ['USHMM RG-50.030*0184'], 'token_start': 9900, 'token_end': 9953}\n"
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22Cause%22%5D+%5B%22I%22%5D+%5B%22%27m%22%5D+%5B%22screaming%22%5D+%5B%5D+%5B%22sometimes%22%5D+%5B%22running%22%5D+%5B%5D+%5B%22screaming%22%5D+%5B%22and%22%5D+%5B%22standing%22%5D+%5B%22by%22%5D+%5B%22the%22%5D+%5B%22crematorium%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': \"Cause I 'm screaming , sometimes running , screaming and standing by the crematorium . \", 'right': '', 'complete_match': \"Cause I 'm screaming , sometimes running , screaming and standing by the crematorium . \", 'testimony_id': 'irn504669', 'shelfmark': ['USHMM RG-50.030*0166'], 'token_start': 5818, 'token_end': 5833}\n"
      ]
     }
    ],
    "source": [
     "fragment_2 = {}\n",
-    "fragment_2['original_sentence'] = \"\"\n",
-    "fragment_2['label']=\"\"\n",
+    "fragment_2['original_sentence'] = \"Cause I'm screaming, sometimes running, screaming and standing by the crematorium.\"\n",
+    "fragment_2['label']=\"Cause I'm screaming, sometimes running, screaming and standing by the crematorium.\"\n",
     "indices = find_sentence_id(fragment_2['original_sentence'])\n",
     "fragment_2['start_sentence_index']=indices[0]\n",
     "fragment_2['end_sentence_index']=indices[1]\n",
@@ -475,22 +458,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22And%22%5D+%5B%22we%22%5D+%5B%22were%22%5D+%5B%22so%22%5D+%5B%22numb%22%5D+%5B%5D+%5B%5D%7B0%2C3%7D+%5B%5D+%5B%22Cathy%22%5D+%5B%5D+%5B%5D%7B0%2C3%7D+%5B%22every%22%5D+%5B%2210%22%5D+%5B%22people%22%5D+%5B%22get%22%5D+%5B%22killed%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': 'And we were so numb , [ ? Cathy ? ] every 10 people get killed . ', 'right': '', 'complete_match': 'And we were so numb , [ ? Cathy ? ] every 10 people get killed . ', 'testimony_id': 'usc_shoah_25287', 'shelfmark': ['USC 25287'], 'token_start': 16040, 'token_end': 16057}\n"
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22I%22%5D+%5B%22%27m%22%5D+%5B%22crying%22%5D+%5B%22and%22%5D+%5B%22screaming%22%5D+%5B%22and%22%5D+%5B%5D%7B0%2C3%7D+%5B%22and%22%5D+%5B%22running%22%5D+%5B%5D+%5B%22wondering%22%5D+%5B%22if%22%5D+%5B%5D%7B0%2C3%7D+%5B%22if%22%5D+%5B%22I%22%5D+%5B%22%27m%22%5D+%5B%22going%22%5D+%5B%22to%22%5D+%5B%22be%22%5D+%5B%22shot%22%5D+%5B%22while%22%5D+%5B%22I%22%5D+%5B%22%27m%22%5D+%5B%22running%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': \"I 'm crying and screaming and -- and running , wondering if -- if I 'm going to be shot while I 'm running . \", 'right': '', 'complete_match': \"I 'm crying and screaming and -- and running , wondering if -- if I 'm going to be shot while I 'm running . \", 'testimony_id': 'HVT-16', 'shelfmark': ['Fortunoff Archive HVT-16'], 'token_start': 3379, 'token_end': 3404}\n"
      ]
     }
    ],
    "source": [
     "fragment_3 = {}\n",
-    "fragment_3['original_sentence'] = \"\"\n",
-    "fragment_3['label']=\"\"\n",
+    "fragment_3['original_sentence'] = \"I'm crying and screaming and-- and running, wondering if-- if I'm going to be shot while I'm running.\"\n",
+    "fragment_3['label']=\"I'm crying and screaming and-- and running, wondering if-- if I'm going to be shot while I'm running.\"\n",
     "indices = find_sentence_id(fragment_3['original_sentence'])\n",
     "fragment_3['start_sentence_index']=indices[0]\n",
     "fragment_3['end_sentence_index']=indices[1]\n",
@@ -502,22 +485,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22from%22%5D+%5B%22people%22%5D+%5B%22being%22%5D+%5B%22wounded%22%5D+%5B%5D+%5B%22from%22%5D+%5B%22people%22%5D+%5B%22being%22%5D+%5B%22killed%22%5D+%5B%5D+%5B%22from%22%5D+%5B%22cries%22%5D+%5B%5D+%5B%22And%22%5D+%5B%22finally%22%5D+%5B%5D+%5B%22everything%22%5D+%5B%22subsided%22%5D+%5B%5D+%5B%22But%22%5D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22alive%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22did%22%5D+%5B%5D+%5B%5D%7B0%2C3%7D+%5B%22I%22%5D+%5B%22did%22%5D+%5B%5D+%5B%22even%22%5D+%5B%22think%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22numb%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
-      "{'left': '', 'match_word': \"from people being wounded , from people being killed , from cries . And finally , everything subsided . But I was alive . I did n't -- I did n't even think . I was numb . \", 'right': '', 'complete_match': \"from people being wounded , from people being killed , from cries . And finally , everything subsided . But I was alive . I did n't -- I did n't even think . I was numb . \", 'testimony_id': 'usc_shoah_2590', 'shelfmark': ['USC 2590'], 'token_start': 6362, 'token_end': 6400}\n"
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22People%22%5D+%5B%22running%22%5D+%5B%5D+%5B%22People%22%5D+%5B%22screaming%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': 'People running . People screaming . ', 'right': '', 'complete_match': 'People running . People screaming . ', 'testimony_id': 'usc_shoah_15732', 'shelfmark': ['USC Shoah Foundation 15732'], 'token_start': 11242, 'token_end': 11248}\n"
      ]
     }
    ],
    "source": [
     "fragment_4 = {}\n",
-    "fragment_4['original_sentence'] = \"\"\n",
-    "fragment_4['label']= \"\"\n",
+    "fragment_4['original_sentence'] = \"People running. People screaming.\"\n",
+    "fragment_4['label']= \"People running. People screaming.\"\n",
     "indices = find_sentence_id(fragment_4['original_sentence'])\n",
     "fragment_4['start_sentence_index']=indices[0]\n",
     "fragment_4['end_sentence_index']=indices[1]\n",
@@ -529,13 +512,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22They%22%5D+%5B%22were%22%5D+%5B%22shooting%22%5D+%5B%22and%22%5D+%5B%22they%22%5D+%5B%22were%22%5D+%5B%22running%22%5D+%5B%22and%22%5D+%5B%22they%22%5D+%5B%22were%22%5D+%5B%22screaming%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': 'They were shooting and they were running and they were screaming . ', 'right': '', 'complete_match': 'They were shooting and they were running and they were screaming . ', 'testimony_id': 'irn508740', 'shelfmark': ['USHMM RG-50.462*0099'], 'token_start': 4554, 'token_end': 4566}\n"
+     ]
+    }
+   ],
    "source": [
     "fragment_5 = {}\n",
-    "fragment_5['original_sentence'] = \"\"\n",
-    "fragment_5['label']= \"\"\n",
+    "fragment_5['original_sentence'] = \"They were shooting and they were running and they were screaming.\"\n",
+    "fragment_5['label']= \"They were shooting and they were running and they were screaming.\"\n",
     "indices = find_sentence_id(fragment_5['original_sentence'])\n",
     "fragment_5['start_sentence_index']=indices[0]\n",
     "fragment_5['end_sentence_index']=indices[1]\n",
@@ -547,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
