--- a/remove_prototypical_nodes.ipynb
+++ b/remove_prototypical_nodes.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,11 +268,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count_number_of_fragments():\n",
+    "def delete_prototypical_nodes():\n",
     "    results = mongo.fragments.find({},{'_id':0})\n",
     "    results = [element for element in results]\n",
     "    print (\"Total number of main nodes\")\n",
@@ -281,13 +281,13 @@
     "    all_fragments = []\n",
     "    for result in results:\n",
     "        mid_nodes = [element for element in result['tree']['children'] if len(element['children'])>0]\n",
-    "        for mid_node in mid_nodes:\n",
-    "\n",
-    "            all_mid_nodes.append(mid_node['label'])\n",
-    "            for fragment in mid_node['children']:\n",
-    "                all_fragments.append(fragment['label'])\n",
-    "            \n",
-    "    print (len(all_fragments))"
+    "        result['tree']['children']=mid_nodes\n",
+    "        all_fragments.append(result)\n",
+    "    for node in all_fragments:\n",
+    "        print(node['label'])\n",
+    "        delete_main_node(node['label'])\n",
+    "        mongo.fragments.insert(node)\n",
+    "        "
    ]
   },
   {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -307,13 +307,47 @@
      "output_type": "stream",
      "text": [
       "Total number of main nodes\n",
-      "28\n",
-      "999\n"
+      "27\n",
+      "fear\n",
+      "yell\n",
+      "beat\n",
+      "guilt\n",
+      "shaking\n",
+      "rape\n",
+      "sleep\n",
+      "collapse\n",
+      "shame\n",
+      "hope\n",
+      "run\n",
+      "laugh\n",
+      "sit\n",
+      "stand\n",
+      "numbness\n",
+      "breathe\n",
+      "cry\n",
+      "recognize\n",
+      "nakedness\n",
+      "beg\n",
+      "whip\n",
+      "rip\n",
+      "force\n",
+      "leave\n",
+      "smell\n",
+      "walk\n",
+      "drive\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/miniconda3/lib/python3.7/site-packages/ipykernel_launcher.py:15: DeprecationWarning: insert is deprecated. Use insert_one or insert_many instead.\n",
+      "  from ipykernel import kernelapp as app\n"
      ]
     }
    ],
    "source": [
-    "count_number_of_fragments()"
+    "delete_prototypical_nodes()"
    ]
   }
  ],
